--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,7 @@ body{
     justify-content: center;
     align-items: center;
     font-family: sans-serif;
+    background-image: linear-gradient(to top, #c4c5c7 0%, #dcdddf 52%, #ebebeb 100%);
 
 }
 
@@ -21,7 +22,7 @@ body{
    
 }
 
-.ecran{
+#ecran{
     width: 100%;
     height: 100px;
     background-color: black;
@@ -65,7 +66,7 @@ button:active{
     /* border: 3px solid white; */
 }
 
-.btnEgal{
+#btnEgal{
     grid-column: span 2;
     background-color: blue;
     font-weight: bold;
@@ -73,7 +74,7 @@ button:active{
     font-size: 30px;
 }
 
-.btnClear{
+#btnClear{
     background-color: orange;
     font-weight: bold;
     color: white;
